--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,8 @@ website:
   navbar:
     background: "#ffffff"
     right:
+      - href: rsvp.qmd
+        text: RSVP
       - href: accommodations.qmd
         text: Accommodations
       - href: travel.qmd
